test/fail/too_large_oct.min
program 
    number x := 020000000000 $$ 2^31
start
end
